# fiduswriter-languagetool

./: .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  dev-requirements.txt  pyproject.toml  setup.py  stylelint.config.js
.github/workflows/: main.yml
ci/: .coveragerc  configuration.py
fiduswriter/languagetool/: apps.py  proxy_views.py  urls.py  views.py
fiduswriter/languagetool/locale/ar/LC_MESSAGES/: djangojs.po
fiduswriter/languagetool/locale/bg/LC_MESSAGES/: djangojs.mo  djangojs.po
fiduswriter/languagetool/locale/cs/LC_MESSAGES/: djangojs.po
fiduswriter/languagetool/locale/da/LC_MESSAGES/: djangojs.po
fiduswriter/languagetool/locale/de/LC_MESSAGES/: djangojs.mo  djangojs.po
fiduswriter/languagetool/locale/en/LC_MESSAGES/: djangojs.po
fiduswriter/languagetool/locale/en_US/LC_MESSAGES/: djangojs.po
fiduswriter/languagetool/locale/es/LC_MESSAGES/: djangojs.mo  djangojs.po
fiduswriter/languagetool/locale/fr/LC_MESSAGES/: djangojs.mo  djangojs.po
fiduswriter/languagetool/locale/it/LC_MESSAGES/: djangojs.mo  djangojs.po
fiduswriter/languagetool/locale/ja/LC_MESSAGES/: djangojs.po
fiduswriter/languagetool/locale/ko/LC_MESSAGES/: djangojs.po
fiduswriter/languagetool/locale/nb/LC_MESSAGES/: djangojs.po
fiduswriter/languagetool/locale/nl/LC_MESSAGES/: djangojs.po
fiduswriter/languagetool/tests/: test_languagetool.py
languagetool/: proxy_views.py
languagetool/static/js/modules/lt/: dialog.js  (+3 more)
lint/: check_unused_imports.js  django_import_resolver.js  package.json
travis/: .coveragerc  configuration.py
(+18 files in other folders)
